--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
     <script src="./overworld-scene.js"></script>
     <script src="./puzzle-scene.js"></script>
 
-
     <script>
         var canvas;
         var context;
@@ -80,12 +79,12 @@
 
             gameTicks = 0;
 
-            changeState(2);
+            changeState(0);
         }
 
         function changeState(id) {
+            states[id].init();
             activeState = states[id];
-            activeState.init();
             onResize();
         }
 
@@ -98,6 +97,10 @@
             activeState.draw(context);
         }
 
+        function functionExists(obj, method) {
+            return typeof obj[method] == "function";
+        }
+
         function onResize() {
             let dpi = window.devicePixelRatio;
             canvas.width = canvas.clientWidth;
@@ -106,47 +109,45 @@
             context.width = canvas.clientWidth / dpi;
             context.height = canvas.clientHeight / dpi;
 
-            camera.center.x = canvas.width / 2;
-            camera.center.y = canvas.height / 2;
-            activeState.onResize();
+            functionExists(activeState, "onResize") ? activeState.onResize() : null;
         }
 
         function onKeyDown(event) {
             keys[event.keyCode] = true;
-            activeState.onKeyDown(event);
+            functionExists(activeState, "onKeyDown") ? activeState.onKeyDown(event) : null;
         }
 
         function onKeyUp(event) {
             keys[event.keyCode] = false;
-            activeState.onKeyUp(event);
+            functionExists(activeState, "onKeyUp") ? activeState.onKeyUp(event) : null;
         }
 
         function onMouseMove(event) {
-            activeState.onMouseMove(event);
+            functionExists(activeState, "onMouseMove") ? activeState.onMouseMove(event) : null;
         }
 
         function onMouseDown(event) {
-            activeState.onMouseDown(event);
+            functionExists(activeState, "onMouseDown") ? activeState.onMouseDown(event) : null;
         }
 
         function onMouseUp(event) {
-            activeState.onMouseUp(event);
+            functionExists(activeState, "onMouseUp") ? activeState.onMouseUp(event) : null;
         }
 
         function onRightClick(event) {
-            activeState.onRightClick(event);
+            functionExists(activeState, "onRightClick") ? activeState.onRightClick(event) : null;
         }
 
         function onTouchStart(event) {
-            activeState.onTouchStart(event);
+            functionExists(activeState, "onTouchStart") ? activeState.onTouchStart(event) : null;
         }
 
         function onTouchMove(event) {
-            activeState.onTouchMove(event);
+            functionExists(activeState, "onTouchMove") ? activeState.onTouchMove(event) : null;
         }
 
         function onTouchEnd(event) {
-            activeState.onTouchEnd(event);
+            functionExists(activeState, "onTouchEnd") ? activeState.onTouchEnd(event) : null;
         }
     </script>
 
@@ -176,11 +177,6 @@
         window.addEventListener("touchmove", onTouchMove);
         window.addEventListener("touchend", onTouchEnd);
     </script>
-
-    <script>
-
-    </script>
-
 </body>
 
 </html>
