--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             margin: 0;
             padding: 0;
             overflow: hidden;
-            background-color: darkslategray;
+            background-color: black;
         }
 
         canvas {
@@ -53,6 +53,13 @@
         states.push(new OverworldScene());
         states.push(new PuzzleScene());
         var activeState = states[0];
+
+        var Color = {};
+        Color.DarkBlue = "#3b72b9";
+        Color.LightBlue = "#7EA8DF";
+        Color.DarkGray = "#748499";
+        Color.LightGray = "#A2A4A7";
+        Color.White = "#FFFFFF";
     </script>
     <script>
         function animate() {
