--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     <!-- <script src="./min.js"></script> -->
     <script src="./KeyCode.js"></script>
     <script src="./manualtween.js"></script>
+    <script src="./colors.js"></script>
+    <script src="./dialog.js"></script>
     <script src="./menu-scene.js"></script>
     <script src="./overworld-scene.js"></script>
     <script src="./puzzle-scene.js"></script>
