--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             padding: 0;
             overflow: hidden;
             background-color: black;
+            height: 100%;
         }
 
         canvas {
@@ -20,7 +21,7 @@
 
         #game {
             width: 100%;
-            height: 100vh;
+            height: 100%;
 
         }
 
