--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+    <link rel="icon" href="data:image/svg+xml,%3Csvg%20xmlns='http://www.w3.org/2000/svg'%20viewBox='0%200%2016%2016'%3E%3Ctext%20x='0'%20y='14'%3E🔷%3C/text%3E%3C/svg%3E" type="image/svg+xml" />
+
+    <title>P4ck3t - a js13k game entry by EyeOfMidas</title>
     <style type="text/css">
         html,
         body {
