adding simple sound effects to dialogs

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <script src="./manualtween.js"></script>
     <script src="./colors.js"></script>
     <script src="./dialog.js"></script>
+    <script src="./sound.js"></script>
     <script src="./menu-scene.js"></script>
     <script src="./overworld-scene.js"></script>
     <script src="./puzzle-scene.js"></script>
