--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
     <div id="debugger-output"></div>
     <div id="game"></div>
     <div id="endgame">
-        <h1>404: Page Not Found</h1>
+        <h1>Response 404: Page Not Found</h1>
         <p>This server has been decommissioned.</p>
         <p>Please reload if you want to make the request again.</p>
-        <p id="endgame--footer">P4ck3t: a js13k game submission by EyeOfMidas</p>
+        <p id="endgame--footer">P4ck3t: a js13k game submission by EyeOfMidas. Thanks for playing!</p>
     </div>
     <!-- <script src="./min.js"></script> -->
     <script src="./KeyCode.js"></script>
